# prism

./: OAUTH_SETUP.md  README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: github.rs  lib.rs  main.rs
