[package]
name = "prism-app"
version = "0.1.0"
description = "A beautiful GitHub PR menu bar app"
authors = ["you"]
edition = "2021"

[lib]
name = "prism_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
open = "5"
dirs = "5"
